# bloom_filter

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  bloomFilter.cpp  bloomFilter.hpp  dicReader.cpp  dicReader.hpp  main.cpp
tests/: CMakeLists.txt  dirty_dictionary.txt  test_bloomFilter.cpp  test_dicReader.cpp
